Elimina texto de relleno

--- a/index.html
+++ b/index.html
@@ -27,140 +27,140 @@
         <div class="tarjeta-header">
           <img src="" alt="" class="imagen pokemon-sprite">
         </div>
-        <div class="texto tarjeta-body">asdasd</div>
+        <div class="texto tarjeta-body"></div>
       </div>
 
       <div class="tarjeta">
         <div class="tarjeta-header">
           <img src="" alt="" class="imagen pokemon-sprite">
         </div>
-        <div class="texto tarjeta-body">asdasd</div>
+        <div class="texto tarjeta-body"></div>
       </div>
 
       <div class="tarjeta">
         <div class="tarjeta-header">
           <img src="" alt="" class="imagen pokemon-sprite">
         </div>
-        <div class="texto tarjeta-body">asdasd</div>
+        <div class="texto tarjeta-body"></div>
       </div>
 
       <div class="tarjeta">
         <div class="tarjeta-header">
           <img src="" alt="" class="imagen pokemon-sprite">
         </div>
-        <div class="texto tarjeta-body">asdasd</div>
+        <div class="texto tarjeta-body"></div>
       </div>
 
       <div class="tarjeta">
         <div class="tarjeta-header">
           <img src="" alt="" class="imagen pokemon-sprite">
         </div>
-        <div class="texto tarjeta-body">asdasd</div>
+        <div class="texto tarjeta-body"></div>
       </div>
 
       <div class="tarjeta">
         <div class="tarjeta-header">
           <img src="" alt="" class="imagen pokemon-sprite">
         </div>
-        <div class="texto tarjeta-body">asdasd</div>
+        <div class="texto tarjeta-body"></div>
       </div>
 
       <div class="tarjeta">
         <div class="tarjeta-header">
           <img src="" alt="" class="imagen pokemon-sprite">
         </div>
-        <div class="texto tarjeta-body">asdasd</div>
+        <div class="texto tarjeta-body"></div>
       </div>
 
       <div class="tarjeta">
         <div class="tarjeta-header">
           <img src="" alt="" class="imagen pokemon-sprite">
         </div>
-        <div class="texto tarjeta-body">asdasd</div>
+        <div class="texto tarjeta-body"></div>
       </div>
 
       <div class="tarjeta">
         <div class="tarjeta-header">
           <img src="" alt="" class="imagen pokemon-sprite">
         </div>
-        <div class="texto tarjeta-body">asdasd</div>
+        <div class="texto tarjeta-body"></div>
       </div>
 
       <div class="tarjeta">
         <div class="tarjeta-header">
           <img src="" alt="" class="imagen pokemon-sprite">
         </div>
-        <div class="texto tarjeta-body">asdasd</div>
+        <div class="texto tarjeta-body"></div>
       </div>
 
       <div class="tarjeta">
         <div class="tarjeta-header">
           <img src="" alt="" class="imagen pokemon-sprite">
         </div>
-        <div class="texto tarjeta-body">asdasd</div>
+        <div class="texto tarjeta-body"></div>
       </div>
 
       <div class="tarjeta">
         <div class="tarjeta-header">
           <img src="" alt="" class="imagen pokemon-sprite">
         </div>
-        <div class="texto tarjeta-body">asdasd</div>
+        <div class="texto tarjeta-body"></div>
       </div>
 
       <div class="tarjeta">
         <div class="tarjeta-header">
           <img src="" alt="" class="imagen pokemon-sprite">
         </div>
-        <div class="texto tarjeta-body">asdasd</div>
+        <div class="texto tarjeta-body"></div>
       </div>
 
       <div class="tarjeta">
         <div class="tarjeta-header">
           <img src="" alt="" class="imagen pokemon-sprite">
         </div>
-        <div class="texto tarjeta-body">asdasd</div>
+        <div class="texto tarjeta-body"></div>
       </div>
 
       <div class="tarjeta">
         <div class="tarjeta-header">
           <img src="" alt="" class="imagen pokemon-sprite">
         </div>
-        <div class="texto tarjeta-body">asdasd</div>
+        <div class="texto tarjeta-body"></div>
       </div>
 
       <div class="tarjeta">
         <div class="tarjeta-header">
           <img src="" alt="" class="imagen pokemon-sprite">
         </div>
-        <div class="texto tarjeta-body">asdasd</div>
+        <div class="texto tarjeta-body"></div>
       </div>
 
       <div class="tarjeta">
         <div class="tarjeta-header">
           <img src="" alt="" class="imagen pokemon-sprite">
         </div>
-        <div class="texto tarjeta-body">asdasd</div>
+        <div class="texto tarjeta-body"></div>
       </div>
 
       <div class="tarjeta">
         <div class="tarjeta-header">
           <img src="" alt="" class="imagen pokemon-sprite">
         </div>
-        <div class="texto tarjeta-body">asdasd</div>
+        <div class="texto tarjeta-body"></div>
       </div>
 
       <div class="tarjeta">
         <div class="tarjeta-header">
           <img src="" alt="" class="imagen pokemon-sprite">
         </div>
-        <div class="texto tarjeta-body">asdasd</div>
+        <div class="texto tarjeta-body"></div>
       </div>
 
       <div class="tarjeta">
         <div class="tarjeta-header">
           <img src="" alt="" class="imagen pokemon-sprite">
         </div>
-        <div class="texto tarjeta-body">asdasd</div>
+        <div class="texto tarjeta-body"></div>
       </div>
     </div>
 
