Actualiza popup para que pueda mostrar la información del pokemmon elegido

--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
           <div class="title">Ejemplo popup</div>
           <button class="close-button">&times;</button>
       </div>
-      <div class="popup-body"></div>
+      <div class="popup-body">
+        <img src="" class="sprite-popup-pokemon" width="200px">
+      </div>
     </div>
     <div id="overlay"></div>
 
