Reestructura información del popup

--- a/index.html
+++ b/index.html
@@ -31,7 +31,12 @@
           <button class="close-button">&times;</button>
       </div>
       <div class="popup-body">
-        <img src="" class="sprite-popup-pokemon" width="200px">
+        <img src="" class="sprite-popup-pokemon">
+        <div class="datos-pokemon">
+          <div class="estatura">Estatura <br>123</div>
+          <div class="peso">Peso <br>123kg</div>
+        </div>
+        
       </div>
     </div>
     <div id="overlay"></div>
