Crea sección de tipos para el popup

--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
           <div class="estatura">Estatura <br>123</div>
           <div class="peso">Peso <br>123kg</div>
         </div>
+        <div class="tipos-pokemon">
+          <div class="tipo">Agua</div>
+        </div>
         
       </div>
     </div>
