Elimina texto de relleno del popup

--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
 
     <div class="popup" id="popup">
       <div class="popup-header">
-          <div class="title">Ejemplo popup</div>
+          <div class="title"></div>
           <button class="close-button">&times;</button>
       </div>
       <div class="popup-body">
         <img src="" class="sprite-popup-pokemon">
         <div class="datos-pokemon">
           <span>Height</span>
-          <div class="estatura"><strong>12</strong></div>
+          <div class="estatura"><strong></strong></div>
           <span>Weight</span>
-          <div class="peso"><strong>12</strong></div>
+          <div class="peso"><strong></strong></div>
         </div>
         <div class="tipos-pokemon">
           
