Separa en módulos usando ESM

--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
 
     <div class="popup" id="popup">
       <div class="popup-header">
-          <div class="title"></div>
+          <div class="title">Loading...</div>
           <button class="close-button">&times;</button>
       </div>
       <div class="popup-body">
         <img src="" class="sprite-popup-pokemon">
         <div class="datos-pokemon">
           <span>Height</span>
-          <div class="estatura"><strong></strong></div>
+          <div class="estatura"><strong>Loading...</strong></div>
           <span>Weight</span>
-          <div class="peso"><strong></strong></div>
+          <div class="peso"><strong>Loading...</strong></div>
         </div>
         <div class="tipos-pokemon">
           
@@ -48,6 +48,7 @@
     <div id="overlay"></div>
 
 
-    <script src="./src/main.js"></script>
+    <!-- <script src="./src/main.js"></script> -->
+    <script src="./src/index.js" type="module"></script>
   </body>
 </html>
